methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:3: error: value rouge is not a member of object java.awt.Color
  ligneFleur(Color.rouge,Color.cyan)
                   ^FlowerPot:26: error: not enough arguments for method tourneDroite: (nb: Int)Unit.
Unspecified value parameter nb.
  tourneDroite()
              ^FlowerPot:29: error: not enough arguments for method ligne: (color: java.awt.Color)Unit.
Unspecified value parameter color.
  ligne()
       ^